--- a/PDF_RAG_Explorer.ipynb
+++ b/PDF_RAG_Explorer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM0imYR5PyLX18zZgXtUubo",
+      "authorship_tag": "ABX9TyP7o4M3su8rMEzeY0pz9NOm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,30 +380,37 @@
         "import nbformat\n",
         "\n",
         "notebook_path = \"/content/drive/MyDrive/Colab Notebooks/PDF_RAG_Explorer.ipynb\" # Corrected path\n",
+        "\n",
+        "\n",
+        "# Read notebook\n",
         "nb = nbformat.read(notebook_path, as_version=nbformat.NO_CONVERT)\n",
         "\n",
-        "# Remove widgets metadata\n",
+        "# Clean up widget metadata\n",
         "for cell in nb.cells:\n",
-        "    if \"metadata\" in cell and \"widgets\" in cell.metadata:\n",
-        "        del cell.metadata[\"widgets\"]\n",
+        "    cell.metadata.pop(\"widgets\", None)\n",
         "\n",
+        "# Also remove global widget metadata if it exists\n",
+        "nb.metadata.pop(\"widgets\", None)\n",
+        "\n",
+        "# Write cleaned notebook\n",
         "nbformat.write(nb, notebook_path)\n",
-        "print(\"Removed widgets metadata successfully!\")"
+        "\n",
+        "print(\"✅ Cleaned notebook metadata successfully!\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5N4vOiTgTK3u",
-        "outputId": "0f7dcc82-f4c6-4051-8e66-f9fa7ffb7b84"
+        "outputId": "3bbeff31-9975-4ff1-b2e5-4af114fc413b"
       },
-      "execution_count": 130,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Removed widgets metadata successfully!\n"
+            "✅ Cleaned notebook metadata successfully!\n"
           ]
         }
       ]
