--- a/PDF_RAG_Explorer.ipynb
+++ b/PDF_RAG_Explorer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP7o4M3su8rMEzeY0pz9NOm",
+      "authorship_tag": "ABX9TyMvWKWpp7I2z30tiqBDIpxY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -379,38 +379,44 @@
       "source": [
         "import nbformat\n",
         "\n",
-        "notebook_path = \"/content/drive/MyDrive/Colab Notebooks/PDF_RAG_Explorer.ipynb\" # Corrected path\n",
+        "path = \"/content/drive/MyDrive/Colab Notebooks/PDF_RAG_Explorer.ipynb\" # Corrected path\n",
         "\n",
         "\n",
-        "# Read notebook\n",
-        "nb = nbformat.read(notebook_path, as_version=nbformat.NO_CONVERT)\n",
+        "# Load notebook\n",
+        "nb = nbformat.read(path, as_version=nbformat.NO_CONVERT)\n",
         "\n",
-        "# Clean up widget metadata\n",
-        "for cell in nb.cells:\n",
-        "    cell.metadata.pop(\"widgets\", None)\n",
+        "# Recursive cleaner\n",
+        "def clean_widgets(obj):\n",
+        "    if isinstance(obj, dict):\n",
+        "        if \"widgets\" in obj:\n",
+        "            del obj[\"widgets\"]\n",
+        "        for v in obj.values():\n",
+        "            clean_widgets(v)\n",
+        "    elif isinstance(obj, list):\n",
+        "        for v in obj:\n",
+        "            clean_widgets(v)\n",
         "\n",
-        "# Also remove global widget metadata if it exists\n",
-        "nb.metadata.pop(\"widgets\", None)\n",
+        "# Clean all metadata widgets recursively\n",
+        "clean_widgets(nb)\n",
         "\n",
-        "# Write cleaned notebook\n",
-        "nbformat.write(nb, notebook_path)\n",
-        "\n",
-        "print(\"✅ Cleaned notebook metadata successfully!\")"
+        "# Save cleaned version\n",
+        "nbformat.write(nb, path)\n",
+        "print(\"✅ All widget metadata removed successfully!\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5N4vOiTgTK3u",
-        "outputId": "3bbeff31-9975-4ff1-b2e5-4af114fc413b"
+        "outputId": "5d29bec9-b6a1-4518-d7e4-e082e3b95674"
       },
-      "execution_count": 133,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Cleaned notebook metadata successfully!\n"
+            "✅ All widget metadata removed successfully!\n"
           ]
         }
       ]
